[metadata]
description-file = README.md

[bdist_wheel]
universal=0

[options]
install_requires =
    twine
    setuptools
    six
    pendulum
    tabulate
    retrying
    assertpy
    bs4
    pluggy
    PyYAML
    cryptography
    urllib3
    requests
    websockets
    httpretty
    pytest
    robotframework
    psutil
    Jinja2
    pymysql